Использовал LiveData, Observer, viewLifecycleOwner инкапсулировал ViewModel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
 
 dependencies {
 
+    //LiveData
+
+
     //навигация
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
